cabal-version:      2.2
category:           Biology
build-type:         Simple
name:               phylocomgraph
version:            0.1.0.1

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Program and library for general phylogenetic graph search

description:        Phylogenetic Componet Graph provides a library for
                    interacting with phylogenetic graphs. It defines a
                    decalartive scripting language for defining phylogenetic
                    searches. Said scripts can be evaluated by the provided pcg
                    program to perform a phylogenetic search on an input dataset.

extra-source-files:
    AUTHORS.md
    CHANGELOG.md
    README.md


-- Group of buildinfo specifications to correctly build and link to the C & C++:
-- FFI code.
common ffi-buildinfo

  cc-options:       --std=c11

  cxx-options:      --std=c++14

  -- This library is required for linking to the C++ standard template library.
  extra-libraries:  stdc++

  hs-source-dirs:   ffi

  c-sources:
    ffi/external-direct-optimization/alignCharacters.c
    ffi/external-direct-optimization/alignmentMatrices.c
    ffi/external-direct-optimization/c_alignment_interface.c
    ffi/external-direct-optimization/c_code_alloc_setup.c
    ffi/external-direct-optimization/costMatrix.c
    ffi/external-direct-optimization/dyn_character.c
    ffi/external-direct-optimization/ukkCheckPoint.c
    ffi/external-direct-optimization/ukkCommon.c
    ffi/memoized-tcm/costMatrixWrapper.c
    ffi/memoized-tcm/dynamicCharacterOperations.c
    ffi/sequential-align/sequentialAlignInterface.c
    ffi/sequential-align/sequentialAlign.c

  cxx-sources:
    ffi/memoized-tcm/costMatrix_2d.cpp
    ffi/memoized-tcm/costMatrix_3d.cpp

  -- Here we list all directories that contain C & C++ header files that the FFI
  -- tools will need to locate when preprocessing the C files. Without listing
  -- the directories containing the C header files here, the FFI preprocessor
  -- (hsc2hs, c2hs, etc.) will fail to locate the requisite files. Note also,
  -- that the parent directory of the nessicary C & C++ header files must be
  -- specified. The preprocessor will not recursively look in subdirectories for
  -- header files!
  include-dirs:
    ffi/external-direct-optimization
    ffi/memoized-tcm
    ffi/sequential-align


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexpose-all-unfoldings
    -foptimal-applicative-do
    -fspecialize-aggressively
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monadfail-instances
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs

  hs-source-dirs:   src

  build-depends:
    alphabet,
    pcg-file-parsers,
    pcg-utility,
    serialize,
    tcm,
    base                    ^>= 4.12.0    && < 4.13.0,
    bimap                   ^>= 0.3.3     && < 0.4,
    binary                  ^>= 0.8.6     && < 0.9,
    bv-little               ^>= 0.1.2     && < 0.2,
    cassava                 ^>= 0.5.0     && < 0.6,
    compact                 ^>= 0.1.0     && < 0.2,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    data-default            ^>= 0.7.1     && < 0.8,
    deepseq                 ^>= 1.4.4     && < 1.5,
    dlist                   ^>= 0.8.0     && < 0.9,
    foldl                   ^>= 1.4.5     && < 1.5,
    -- >=2999.20 Required for forgiving construction of DOT object
    graphviz                 >= 2999.20.0 && < 2999.21,
    hashable                ^>= 1.2.7     && < 1.3,
    integer-gmp             ^>= 1.0.2     && < 1.1,
    keys                    ^>= 3.12.1    && < 3.13,
    lens                    ^>= 4.17      && < 4.18,
    mono-traversable        ^>= 1.0.10    && < 1.1,
    mtl                     ^>= 2.2.2     && < 2.3,
    parallel                ^>= 3.2.2     && < 3.3,
    pointed                 ^>= 5.0.1     && < 5.1,
    pretty-tree             ^>= 0.1.0     && < 0.2,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    semigroups              ^>= 0.18.5    && < 0.19,
    smallcheck              ^>= 1.1.5     && < 1.2,
    text                    ^>= 1.2.3     && < 1.3,
    text-short              ^>= 0.1.2     && < 0.2,
    transformers            ^>= 0.5.5     && < 0.6,
    unordered-containers    ^>= 0.2.9     && < 0.3,
    validation              ^>= 1         && < 1.1,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
    vector-binary-instances ^>= 0.2.5     && < 0.3,
    -- >=3.4 required for corrected definition of (!) & index
    vector-instances         >= 3.4       && < 3.5,
    xml                     ^>= 1.3.14    && < 1.4

  exposed-modules:
    Analysis.Parsimony.Additive.Internal
    Analysis.Parsimony.Dynamic.DirectOptimization
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise
    Analysis.Parsimony.Dynamic.SequentialAlign
    Analysis.Parsimony.Fitch.Internal
    Analysis.Parsimony.Sankoff.Internal
    Analysis.Parsimony.Internal
    Analysis.Scoring
    Bio.Character
    Bio.Character.Decoration.Additive
    Bio.Character.Decoration.Continuous
    Bio.Character.Decoration.Discrete
    Bio.Character.Decoration.Dynamic
    Bio.Character.Decoration.Fitch
    Bio.Character.Decoration.Metric
    Bio.Character.Decoration.NonMetric
    Bio.Character.Encodable
    Bio.Character.Encodable.Continuous
    Bio.Character.Parsed
    Bio.Character.Type
    Bio.Metadata
    Bio.Metadata.CharacterName
    Bio.Metadata.Continuous
    Bio.Metadata.Discrete
    Bio.Metadata.DiscreteWithTCM
    Bio.Metadata.Dynamic
    Bio.Metadata.Parsed
    Bio.Sequence
    Bio.Sequence.Block
    Bio.Sequence.Character
    Bio.Sequence.Metadata
    Bio.Graph
    Bio.Graph.Component
    Bio.Graph.Forest.Parsed
    Bio.Graph.LeafSet
    Bio.Graph.Node
    Bio.Graph.PhylogeneticDAG
    Bio.Graph.ReferenceDAG
    Bio.Graph.ReferenceDAG.Internal
    Bio.Graph.Solution
    Bio.Graph.ZipperDAG
    Control.Evaluation
    Control.Monad.Logger
    Data.EdgeLength
    Data.TopologyRepresentation
    Data.NodeLabel
    Test.Custom.DynamicCharacterNode
    Test.Custom.NucleotideSequence

  other-modules:
    Analysis.Parsimony.Dynamic.DirectOptimization.Internal
--    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Internal
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.NeedlemanWunsch
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Internal
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Ribbon
    Analysis.Parsimony.Dynamic.SequentialAlign.FFI
    Bio.Character.Decoration.Additive.Class
    Bio.Character.Decoration.Additive.Internal
    Bio.Character.Decoration.Continuous.Class
    Bio.Character.Decoration.Continuous.Internal
    Bio.Character.Decoration.Dynamic.Class
    Bio.Character.Decoration.Dynamic.Internal
    Bio.Character.Decoration.Fitch.Class
    Bio.Character.Decoration.Fitch.Internal
    Bio.Character.Decoration.Metric.Class
    Bio.Character.Decoration.Metric.Internal
    Bio.Character.Decoration.NonMetric.Class
    Bio.Character.Decoration.NonMetric.Internal
    Bio.Character.Decoration.Shared
    Bio.Character.Encodable.Continuous.Class
    Bio.Character.Encodable.Continuous.Internal
    Bio.Character.Encodable.Dynamic
    Bio.Character.Encodable.Dynamic.Class
    Bio.Character.Encodable.Dynamic.Internal
    Bio.Character.Encodable.Internal
    Bio.Character.Encodable.Static
    Bio.Character.Encodable.Static.Class
    Bio.Character.Encodable.Static.Internal
    Bio.Character.Encodable.Stream
    Bio.Character.Parsed.Class
    Bio.Character.Parsed.Internal
    Bio.Metadata.General
    Bio.Metadata.General.Class
    Bio.Metadata.General.Internal
    Bio.Metadata.Discrete.Class
    Bio.Metadata.Discrete.Internal
    Bio.Metadata.DiscreteWithTCM.Class
    Bio.Metadata.DiscreteWithTCM.Internal
    Bio.Metadata.Dynamic.Class
    Bio.Metadata.Dynamic.Internal
    Bio.Metadata.MetricRepresentation
    Bio.Graph.BinaryRenderingTree
    Bio.Graph.Constructions
    Bio.Graph.Forest
    Bio.Graph.Node.Internal
    Bio.Graph.PhylogeneticDAG.Class
    Bio.Graph.PhylogeneticDAG.Internal
    Bio.Graph.PhylogeneticDAG.NetworkEdgeQuantification
    Bio.Graph.PhylogeneticDAG.DynamicCharacterRerooting
    Bio.Graph.PhylogeneticDAG.Postorder
    Bio.Graph.PhylogeneticDAG.Preorder
    Bio.Graph.PhylogeneticDAG.Reification
    Bio.Graph.PhylogeneticDAG.TotalEdgeCost
    Bio.Graph.ZipperDAG.Internal
    Bio.Sequence.Block.Builder
    Bio.Sequence.Block.Character
    Bio.Sequence.Block.Internal
    Bio.Sequence.Block.Metadata
    Bio.Sequence.Internal
    Control.Evaluation.Unit
    Control.Evaluation.Internal
    Control.Evaluation.Trans
    Data.EdgeSet
    Data.Range



-- A general purpose library for character state names.
--
-- Defines custom types for working with an alphabet of character
-- state names dealing with ambiguity groups.

library alphabet

  import:
    ghc-flags,
    language-specs

  hs-source-dirs:    
    lib/alphabet/src

  build-depends:
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    containers              ^>= 0.5.8     && < 0.7,
    deepseq                 ^>= 1.4.4     && < 1.5,
    keys                    ^>= 3.12.1    && < 3.13,
    mtl                     ^>= 2.2.2     && < 2.3,
    pcg-utility,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    semigroups              ^>= 0.18.5    && < 0.19,
    semigroupoids           ^>= 5.2.1     && < 5.4,
    serialize,
    vector                   >= 0.12.0.2  && < 0.13,
    xml                     ^>= 1.3.14    && < 1.4,

  exposed-modules:
    Data.Alphabet
    Data.Alphabet.IUPAC
 
  other-modules:
    Data.Alphabet.Internal
    Data.Alphabet.Special


-- Parsers for the input file types accepted by PCG
--
-- Defines file parsers for Fasta files with sequence spliting,
-- Newick files with support for extended newick format, Nexus
-- files (though many block types are skipped), DOT files as
-- graph input, TNT files (though many commands are skipped),
-- and custom file formats for parsing transition cost matrices
-- with an alphabet, and the depricated vertex/edge/root set
-- format.
library pcg-file-parsers

  import:
    ghc-flags,
    language-specs


  hs-source-dirs:   lib/pcg-file-parsers/src

  build-depends:
    pcg-utility,
    base                    ^>= 4.12.0    && < 4.13,
    case-insensitive        ^>= 1.2.0     && < 1.3,
    containers              ^>= 0.5.8     && < 0.7,
    dlist                   ^>= 0.8.0     && < 0.9,
    graphviz                 >= 2999.20.0 && < 2999.21,
    keys                    ^>= 3.12.1    && < 3.13,
    megaparsec              ^>= 7.0       && < 7.1,
    mtl                     ^>= 2.2.2     && < 2.3,
    parser-combinators      ^>= 1.0       && < 1.1,
    safe                    ^>= 0.3.17    && < 0.4,
    scientific              ^>= 0.3.6     && < 0.4,
    semigroupoids           ^>= 5.2.1     && < 5.4,
    text                    ^>= 1.2.3     && < 1.3,
    vector                   >= 0.12.0.2  && < 0.13,

  exposed-modules:
    File.Format.Dot
    File.Format.Fasta
    File.Format.Fastc
    File.Format.Newick
    File.Format.Nexus
    File.Format.TNT
    File.Format.TransitionCostMatrix
    File.Format.VertexEdgeRoot

  other-modules:
    File.Format.Fasta.Converter
    File.Format.Fasta.Internal
    File.Format.Fasta.Parser
    File.Format.Fastc.Parser
    File.Format.Newick.Internal
    File.Format.Newick.Parser
    File.Format.Nexus.Data
    File.Format.Nexus.Parser
    File.Format.Nexus.Partition
    File.Format.Nexus.Validate
    File.Format.TNT.Command.CCode
    File.Format.TNT.Command.CNames
    File.Format.TNT.Command.Cost
    File.Format.TNT.Command.NStates
    File.Format.TNT.Command.Procedure
    File.Format.TNT.Command.TRead
    File.Format.TNT.Command.XRead
    File.Format.TNT.Parser
    File.Format.TNT.Partitioning
    File.Format.TNT.Internal
    File.Format.TransitionCostMatrix.Parser
    File.Format.VertexEdgeRoot.Parser
    Text.Megaparsec.Custom


-- Defines the grammar & specific commands of the PCG langauge
--
-- In addition to the grammar definition, this library exports a parser for the
-- grammar. Each command available in PCG is defined here and a script parser is
-- exported to parse a sequence of commands which represents the computation to
-- be performed by PCG.
library pcg-language

  import:
    ghc-flags,
    language-specs

  hs-source-dirs:      lib/pcg-language

  build-depends:
    base                    ^>= 4.12.0    && < 4.13,
    case-insensitive        ^>= 1.2.0     && < 1.3,
    containers              ^>= 0.5.8     && < 0.7,
    free                    ^>= 5.1       && < 5.2,
    keys                    ^>= 3.12.1    && < 3.13,
    megaparsec              ^>= 7.0.0     && < 7.1,
    parser-combinators      ^>= 1.0.0     && < 1.1,
    scientific              ^>= 0.3.6     && < 0.4,
    text                    ^>= 1.2.3     && < 1.3,
    time                    ^>= 1.8.0     && < 1.9,

  exposed-modules:
    PCG.Syntax
    PCG.Command.Build
    PCG.Command.Echo
    PCG.Command.Read
    PCG.Command.Report
    PCG.Command.Save
    PCG.Command.Load
    PCG.Syntax.Combinators

  other-modules:
    PCG.Syntax.Parser
    PCG.Syntax.Primitive


--  Collection of utility functions and data structures
--
--  Defines custom data structures for special use cases,
--  more abstract functions that base provides, and reexported
--  correcting to deficient libraries.
library pcg-utility

  import:
    ghc-flags,
    language-specs

  hs-source-dirs:   lib/pcg-utility/src

  build-depends:
    base                    ^>= 4.12.0    && < 4.13,
    binary                  ^>= 0.8.6     && < 0.9,
    bv-little               ^>= 0.1.2     && < 0.2,
    containers              ^>= 0.5.8     && < 0.7,
    directory               ^>= 1.3.3     && < 1.4,
    deepseq                 ^>= 1.4.4     && < 1.5,
    foldl                   ^>= 1.4.5     && < 1.5,
    hashable                ^>= 1.2.7     && < 1.3,
    integer-gmp             ^>= 1.0.2     && < 1.1,
    keys                    ^>= 3.12.1    && < 3.13,
    lens                    ^>= 4.17      && < 4.18,
    matrix                  ^>= 0.3.6     && < 0.4,
    mono-traversable        ^>= 1.0.10    && < 1.1,
    parallel                ^>= 3.2.2     && < 3.3,
    pointed                 ^>= 5.0.1     && < 5.1,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    semigroupoids           ^>= 5.2.1     && < 5.4,
    transformers            ^>= 0.5.5     && < 0.6,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    validation              ^>= 1         && < 1.1,
    vector                   >= 0.12.0.2  && < 0.13,
    vector-instances         >= 3.4       && < 3.5,

  exposed-modules:
    Control.Parallel.Custom
    Data.BitMatrix
    Data.Binary.Utility
    Data.Either.Custom
    Data.Foldable.Custom
    Data.List.Utility
    Data.Matrix.NotStupid
    Data.MemoVector
    Data.MutualExclusionSet
    Data.Tuple.Utility
    Data.UnionSet
    Data.Vector.Custom
    Data.Vector.NonEmpty
    FFI.Character.Exportable
    FFI.Character.Exportable.Class
    Numeric.Extended
    Numeric.Extended.Natural
    Numeric.Extended.Real
    Numeric.NonNegativeAverage
    Test.HUnit.Custom
    Test.QuickCheck.Arbitrary.Instances


  other-modules:
    Data.BitMatrix.Internal
    Data.MutualExclusionSet.Internal
    Numeric.Extended.Internal


-- A library for defining custom serialisation and rendering functionality.
--
-- Defines custom helper functions for serializing to data formats and related
-- to text representations.

library serialize

  import:
    ghc-flags,
    language-specs

  hs-source-dirs:    lib/serialize/src

  build-depends:
    base                    ^>= 4.12.0    && < 4.13,
    keys                    ^>= 3.12.1    && < 3.13,
    text-short              ^>= 0.1.2     && < 0.2,
    text-show               ^>= 3.7.5     && < 3.8,
    xml                     ^>= 1.3.14    && < 1.4,

  exposed-modules:
    ShortText.Custom
    TextShow.Custom
    Text.Newick.Class
    Text.XML
    Text.XML.Class
    Text.XML.Custom
 
  other-modules:

-- A general purpose library for working with transition cost matrices.

library tcm

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs,

  hs-source-dirs:
    lib/tcm/src/

  build-depends:
    pcg-utility,
    serialize,
    base                    ^>= 4.12.0    && < 4.13,
    containers              ^>= 0.5.8     && < 0.7,
    deepseq                 ^>= 1.4.4     && < 1.5,
    mono-traversable        ^>= 1.0.10    && < 1.1,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    vector                   >= 0.12.0.2  && < 0.13,


  exposed-modules:
    Data.TCM
    Data.TCM.Dense
    Data.TCM.Dense.FFI
    Data.TCM.Memoized
    Data.TCM.Memoized.FFI

  other-modules:
    Data.TCM.Internal

   


executable pcg

  import:
    ghc-flags,
    language-specs

  main-is:          Main.hs

  ghc-options:      -threaded -rtsopts

  hs-source-dirs:   app

  build-depends:
    alphabet,
    phylocomgraph,
    pcg-file-parsers,
    pcg-language,
    pcg-utility,
    serialize,
    tcm,
    ansi-wl-pprint          ^>= 0.6.8     && < 0.7,
    base                    ^>= 4.12.0    && < 4.13,
    binary                  ^>= 0.8.6     && < 0.9,
    bytestring              ^>= 0.10.8    && < 0.11,
    cassava                 ^>= 0.5.0     && < 0.6,
    compact                 ^>= 0.1.0     && < 0.2,
    -- Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    data-default            ^>= 0.7.1     && < 0.8,
    deepseq                 ^>= 1.4.4     && < 1.5,
    directory               ^>= 1.3.3     && < 1.4,
    filepath                ^>= 1.4.2     && < 1.5,
    gitrev                  ^>= 1.3.1     && < 1.4,
    Glob                    ^>= 0.10.0    && < 0.11,
    -- >=2999.20 Required for forgivig constructio of DOT object
    graphviz                 >= 2999.20.0 && < 2999.21,
    keys                    ^>= 3.12.1    && < 3.13,
    lens                    ^>= 4.17      && < 4.18,
    megaparsec              ^>= 7.0       && < 7.1,
    optparse-applicative    ^>= 0.14.3    && < 0.15,
    parallel                ^>= 3.2.2     && < 3.3,
    random-shuffle          ^>= 0.0.4     && < 0.1,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    semigroups              ^>= 0.18.5    && < 0.19,
    text                    ^>= 1.2.3     && < 1.3,
    text-short              ^>= 0.1.2     && < 0.2,
    transformers            ^>= 0.5.5     && < 0.6,
    validation              ^>= 1         && < 1.1,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
    xml                     ^>= 1.3.14    && < 1.4,

  other-modules:
    Paths_phylocomgraph
    PCG.Command.Build.Evaluate
    PCG.Command.Echo.Evaluate
    PCG.Command.Load.Evaluate
    PCG.Command.Read.DecorationInitialization
    PCG.Command.Read.Evaluate
    PCG.Command.Read.ReadError
    PCG.Command.Read.Unification.Master
    PCG.Command.Read.Unification.UnificationError
    PCG.Command.Report.Evaluate
    PCG.Command.Report.GraphViz
    PCG.Command.Report.Metadata
    PCG.Command.Save.Evaluate
    PCG.Computation.Internal


executable fasta-differ

  import:
    ghc-flags,
    language-specs

  main-is:          fasta-differ.hs

  hs-source-dirs:   utils

  build-depends:
    pcg-file-parsers,
    base                    ^>= 4.12.0    && < 4.13,
    containers              ^>= 0.5.8     && < 0.7,
    keys                    ^>= 3.12.1    && < 3.13,
    megaparsec              ^>= 7.0       && < 7.1,


executable 2d-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:          2d-do-comparison.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    tcm,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable 3d-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:          3d-do-comparison.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    tcm,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    deepseq                 ^>= 1.4.4     && < 1.5,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable affine-safety

  import:
    ghc-flags,
    language-specs

  main-is:          affine-safety.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    tcm,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable generate-data-set

  import:
    ghc-flags,
    language-specs

  main-is:          generate-data-set.hs

  hs-source-dirs:   utils

  build-depends:
    ansi-wl-pprint          ^>= 0.6.8     && < 0.7,
    base                    ^>= 4.12.0    && < 4.13,
    containers              ^>= 0.5.8     && < 0.7,
    keys                    ^>= 3.12.1    && < 3.13,
    MemoTrie                ^>= 0.6.9     && < 0.7,
    mtl                     ^>= 2.2.2     && < 2.3,
    optparse-applicative    ^>= 0.14.3    && < 0.15,
    random                  ^>= 1.1       && < 1.2,
    random-shuffle          ^>= 0.0.4     && < 0.1,
    vector                   >= 0.12.0.2  && < 0.13,
    validation              ^>= 1         && < 1.1,


executable generate-tcm

  import:
    ghc-flags,
    language-specs

  main-is:          generate-tcm.hs

  hs-source-dirs:   utils

  build-depends:
    pcg-utility,
    ansi-wl-pprint          ^>= 0.6.8     && < 0.7,
    base                    ^>= 4.12.0    && < 4.13,
    containers              ^>= 0.5.8     && < 0.7,
    keys                    ^>= 3.12.1    && < 3.13,
    optparse-applicative    ^>= 0.14.3    && < 0.15,
    vector                   >= 0.12.0.2  && < 0.13,


executable newick-resolver

  import:
    ghc-flags,
    language-specs

  main-is:          newick-resolver.hs

  hs-source-dirs:   utils

  build-depends:
    pcg-file-parsers,
    base                    ^>= 4.12.0    && < 4.13,
    megaparsec              ^>= 7.0       && < 7.1,


executable sequential-alignment-invariants

  import:
    ghc-flags,
    language-specs

  main-is:          sequential-alignment-invariants.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    tcm,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable three-way-mean-check

  import:
    ghc-flags,
    language-specs

  main-is:          three-way-mean-check.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    lens                    ^>= 4.17      && < 4.18,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable ukkonen-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:          ukkonen-do-comparison.hs

  hs-source-dirs:   utils

  build-depends:
    alphabet,
    phylocomgraph,
    tcm,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    QuickCheck              ^>= 2.12.6    && < 2.13,


executable pcg-file-parsers-file-tests

  import:
    ghc-flags,
    language-specs
         
  main-is:             FileTests.hs

  hs-source-dirs:      lib/pcg-file-parsers/test

  ghc-options:         -threaded

  build-depends: 
    pcg-file-parsers,
    base                    ^>= 4.12.0    && < 4.13,
    tasty                   ^>= 1.2       && < 1.3,
    containers              ^>= 0.5.8     && < 0.7,
    directory               ^>= 1.3.3     && < 1.4,
    megaparsec              ^>= 7.0       && < 7.1,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,

  other-modules:
    Test.Custom.Parse
    TestSuite.GeneratedTests
    TestSuite.GeneratedTests.Fasta
    TestSuite.GeneratedTests.Fastc
    TestSuite.GeneratedTests.Internal
    TestSuite.GeneratedTests.Nexus
    TestSuite.GeneratedTests.TNT


test-suite integration-tests

  import:
    ghc-flags,
    language-specs

  main-is:          IntegrationTests.hs

  type:             exitcode-stdio-1.0

  ghc-options:      -threaded -with-rtsopts=-N

  hs-source-dirs:   test

  build-depends:
    alphabet,
    pcg-utility,
    serialize,
    phylocomgraph,
    base                    ^>= 4.12.0    && < 4.13,
    binary                  ^>= 0.8.6     && < 0.9,
    bytestring              ^>= 0.10.8    && < 0.11,
    containers              ^>= 0.5.8     && < 0.7,
    deepseq                 ^>= 1.4.4     && < 1.5,
    directory               ^>= 1.3.3     && < 1.4,
    filepath                ^>= 1.4.2     && < 1.5,
    lens                    ^>= 4.17      && < 4.18,
    process ,
    semigroups              ^>= 0.18.5    && < 0.19,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-golden,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    tasty-rerun

  other-modules:
    TestSuite.GoldenTests
    TestSuite.ScriptTests
    TestSuite.SubProcess


test-suite unit-tests

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs

  main-is:          UnitTests.hs

  type:             exitcode-stdio-1.0

  ghc-options:      -threaded
--    -with-rtsopts=-N4

  -- This is a hack beacuse the cxx-options & cxx-options feature in Cabal-2.2
  -- is not fully implmented and does not correctly link to the C++ sources.
--  if os(linux) && arch(x86_64)
--    ghc-options:    .stack-work/dist/x86_64-linux/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_2d.dyn_o
--                    .stack-work/dist/x86_64-linux/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_3d.dyn_o

--  if os(osx) && arch(x86_64)
--    ghc-options:    .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_2d.dyn_o
--                    .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_3d.dyn_o

  hs-source-dirs:   test, src, app

  build-depends:
    alphabet,
    pcg-utility,
    serialize,
    phylocomgraph,
    base                    ^>= 4.12.0    && < 4.13,
    bimap                   ^>= 0.3.3     && < 0.4,
    binary                  ^>= 0.8.6     && < 0.9,
    bv-little               ^>= 0.1.2     && < 0.2,
    cassava                 ^>= 0.5       && < 0.6,
    containers              ^>= 0.5.8     && < 0.7,
    deepseq                 ^>= 1.4.4     && < 1.5,
    dlist                   ^>= 0.8.0     && < 0.9,
    foldl                   ^>= 1.4.5     && < 1.5,
    graphviz                 >= 2999.20.0 && < 2999.21,
    hashable                ^>= 1.2.7     && < 1.3,
    integer-gmp             ^>= 1.0.2     && < 1.1,
    keys                    ^>= 3.12.1    && < 3.13,
    lens                    ^>= 4.17      && < 4.18,
    mono-traversable        ^>= 1.0.10    && < 1.1,
    mtl                     ^>= 2.2.2     && < 2.3,
    pointed                 ^>= 5.0.1     && < 5.1,
    pretty-tree             ^>= 0.1.0     && < 0.2,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    semigroupoids           ^>= 5.2.1     && < 5.4,
    semigroups              ^>= 0.18.5    && < 0.19,
    smallcheck              ^>= 1.1.5     && < 1.2,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    tasty-quickcheck,
    tasty-smallcheck,
    tasty-rerun,
    transformers            ^>= 0.5.5     && < 0.6,
    unordered-containers    ^>= 0.2.9     && < 0.3,
    vector                   >= 0.12.0.2  && < 0.13,
    vector-binary-instances ^>= 0.2.5     && < 0.3,
    vector-instances         >= 3.4       && < 3.5,
    xml                     ^>= 1.3.14    && < 1.4,

  other-modules:
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Internal
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.NeedlemanWunsch
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Test
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Internal
    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Ribbon
    Analysis.Parsimony.Internal
    Bio.Character
    Bio.Character.Encodable
    Bio.Character.Encodable.Continuous
    Bio.Character.Encodable.Continuous.Class
    Bio.Character.Encodable.Continuous.Internal
    Bio.Character.Encodable.Dynamic
    Bio.Character.Encodable.Dynamic.Class
    Bio.Character.Encodable.Dynamic.Internal
    Bio.Character.Encodable.Dynamic.Test
    Bio.Character.Encodable.Static
    Bio.Character.Encodable.Static.Class
    Bio.Character.Encodable.Static.Internal
    Bio.Character.Encodable.Static.Test
    Bio.Character.Encodable.Internal
    Bio.Character.Encodable.Static
    Bio.Character.Encodable.Static.Class
    Bio.Character.Encodable.Static.Internal
    Bio.Character.Encodable.Stream
    Bio.Character.Type
    Bio.Graph.BinaryRenderingTree
    Bio.Graph.Component
    Bio.Graph.LeafSet
    Bio.Graph.ReferenceDAG.Internal
    Bio.Graph.ReferenceDAG.Test
    Control.Evaluation.Internal
    Control.Evaluation.Test
    Control.Evaluation.Unit
    Control.Monad.Logger
    Data.EdgeSet
    Data.Range
    Data.TCM.Test
    TestSuite.ExecutableTests
    TestSuite.LibraryTests



test-suite pcg-utility-test-suite

  import:
    ghc-flags,
    language-specs

  main-is:          
    TestSuite.hs

  type:             
    exitcode-stdio-1.0

  hs-source-dirs:   
    lib/pcg-utility/test

  build-depends:
    alphabet,
    pcg-utility,
    serialize,
    base                    ^>= 4.12.0    && < 4.13,
    bv-little               ^>= 0.1.2     && < 0.2,
    deepseq                 ^>= 1.4.4     && < 1.5,
    integer-gmp             ^>= 1.0.2     && < 1.1,
    mono-traversable        ^>= 1.0.10    && < 1.1,
    parallel                ^>= 3.2.2     && < 3.3,
    QuickCheck              ^>= 2.12.6    && < 2.13,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    tasty-quickcheck,
    tasty-rerun
                    
  other-modules:
    Control.Parallel.Test
    Data.BitMatrix.Test
    Data.MutualExclusionSet.Test
    Numeric.Extended.Natural.Test
    Numeric.Extended.Real.Test
    Numeric.NonNegativeAverage.Test
    Data.List.Test


test-suite pcg-file-parsers-unit-tests

  import:
    ghc-flags,
    language-specs

  main-is:          
    TestSuite.hs

  type:             
    exitcode-stdio-1.0

  hs-source-dirs:   
    lib/pcg-file-parsers/src, lib/pcg-file-parsers/test

  ghc-options:      
    -threaded

  build-depends:
    alphabet,
    pcg-utility,
    serialize,
    base                    ^>= 4.12.0    && < 4.13,
    case-insensitive        ^>= 1.2.0     && < 1.3,
    containers              ^>= 0.5.8     && < 0.7,
    dlist                   ^>= 0.8.0     && < 0.9,
    either,
    keys                    ^>= 3.12.1    && < 3.13,
    megaparsec              ^>= 7.0       && < 7.1,
    parser-combinators      ^>= 1.0       && < 1.1,
    safe                    ^>= 0.3.17    && < 0.4,
    scientific              ^>= 0.3.6     && < 0.4,
    smallcheck              ^>= 1.1.5     && < 1.2,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    tasty-quickcheck,
    tasty-rerun,
    vector                   >= 0.12.0.2  && < 0.13,

  other-modules:
       File.Format.Fasta.Internal
       File.Format.Fasta.Parser
       File.Format.Fasta.Test
       File.Format.Fastc.Parser
       File.Format.Fastc.Test
       File.Format.Newick.Internal
       File.Format.Newick.Parser
       File.Format.Newick.Test
       File.Format.TNT.Command.CCode
       File.Format.TNT.Command.CNames
       File.Format.TNT.Command.Procedure
       File.Format.TNT.Command.TRead
       File.Format.TNT.Command.XRead
       File.Format.TNT.Internal
       File.Format.TNT.Test
       File.Format.TransitionCostMatrix.Parser
       File.Format.TransitionCostMatrix.Test
       File.Format.VertexEdgeRoot.Parser
       File.Format.VertexEdgeRoot.Test
       Test.Custom.Parse
       Text.Megaparsec.Custom
       Text.Megaparsec.Custom.Test


test-suite alphabet-test-suite

  import:
    ghc-flags,
    language-specs

  main-is:
    TestSuite.hs

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    lib/alphabet/test

  ghc-options:
    -threaded

  build-depends:
    alphabet,
    base                    ^>= 4.12.0    && < 4.13.0,
    tasty                   ^>= 1.2       && < 1.3,
    tasty-hunit             ^>= 0.10.0    && < 0.11,
    tasty-quickcheck,
    tasty-rerun

  other-modules:
    Alphabet.Test
    


benchmark pcg-utility-benchmark-suite

  import:           
      ghc-flags
    , language-specs

  main-is:          
    Benchmarks.hs

  type:             
    exitcode-stdio-1.0

  hs-source-dirs: 
    lib/pcg-utility/bench

  build-depends:
    pcg-utility,
    base                    ^>= 4.12.0    && < 4.13,
    criterion,
    deepseq                 ^>= 1.4.4     && < 1.5,
    ghc-prim,

  ghc-options:
    -fdicts-cheap
    -fmax-simplifier-iterations=10
    -fspec-constr-count=6
    -threaded
                    
  other-modules:
    Data.MutualExclusionSet.Bench
    Numeric.Extended.Natural.Bench

                       
